Fixed scrollbar in the sidebar section

--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,8 @@
 
 .usersList {
   width: 100%;
+  height: 100%;
+  max-height: 554px;
   /* margin-top: 5px; */
   overflow: hidden;
   overflow-y: scroll;
